added pages and edit the gallery

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <nav>
             <img src="imgs/logo.jpg" alt="Agafay Quad Riding Logo" class="header-logo">
             <ul class="nav-links">
-                <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="#gallery"><i class="fas fa-images"></i> Gallery</a></li>
-                <li><a href="#packs"><i class="fa-solid fa-tag"></i> Packs</a></li>
-                <li><a href="#contact"><i class="fas fa-envelope"></i> Contact Us</a></li>
-                <li><a href="#about"><i class="fas fa-info-circle"></i> About Us</a></li>
+                <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="/pages/gallery.html"><i class="fas fa-images"></i> Gallery</a></li>
+                <li><a href="/pages/packs.html"><i class="fa-solid fa-tag"></i> Packs</a></li>
+                <li><a href="/pages/contact.html"><i class="fas fa-envelope"></i> Contact Us</a></li>
+                <li><a href="/pages/aboout.html"><i class="fas fa-info-circle"></i> About Us</a></li>
             </ul>
             <button class="language-toggle">EN / FR</button>
         </nav>
